<resources>
    <string name="app_name">login_activity</string>
    <string name="password">비밀번호를 입력해주세요.</string>
    <string name="ID">아이디</string>
    <string name="ID_hint">아이디를 입력해주세요.</string>
    <string name="name_tag">이름</string>
    <string name="name">이름을 입력해주세요.</string>
    <string name="login_tag">로그인</string>
    <string name="password_tag">비밀번호</string>
    <string name="test">test</string>
    <string name="join_tag">회원가입</string>
    <string name="sign_up">회원가입</string>
</resources>