<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signupActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-16dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="327dp"
        android:layout_height="156dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/test" />

    <EditText
        android:id="@+id/signName"
        android:layout_width="348dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:scrollbarSize="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="134dp"
        android:layout_height="37dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="48dp"
        android:text="@string/name_tag"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/signId"
        android:layout_width="348dp"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:hint="@string/ID_hint"
        android:inputType="text"
        android:scrollbarSize="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints="" />

    <EditText
        android:id="@+id/signPass"
        android:layout_width="348dp"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:scrollbarSize="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="132dp"
        android:layout_height="26dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="74dp"

        android:text="@string/ID"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="132dp"
        android:layout_height="26dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="74dp"

        android:text="@string/password_tag"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="289dp"
        android:layout_height="62dp"
        android:layout_marginBottom="80dp"
        android:text="@string/sign_up"
        android:textSize="24dp"
        app:iconSize="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signPass"
        />
</androidx.constraintlayout.widget.ConstraintLayout>